Use Faker gem to generate random attributes in factories
* I've set Faker's locale so it generates UK-style values, e.g.
postcode, phone number, etc.

* I've customised the Faker::Company.name method so it generates more
UK-like company names.

* I've used the `unique` method on each of the Faker generators to
generate all values [1], even though none of the values currently need
to be unique for validation purposes. I think this is potentially useful
in identifying problems with our code and we can always make this
deterministic by seeding its pseudo-random number generator [2].

[1]: https://github.com/stympy/faker#ensuring-unique-values
[2]: https://github.com/stympy/faker#deterministic-random

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,8 @@ en:
     errors:
       messages:
         invalid_postcode: 'is not a valid postcode'
+  faker:
+    company:
+      suffix: [Ltd, plc, LLP]
+      name:
+        - "#{Name.last_name} #{suffix}"
