Improve error reporting during search journey

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,9 @@
 en:
-  activerecord:
-    errors:
-      messages:
-        invalid_postcode: 'is not a valid postcode'
+  errors:
+    format: "%{message}"
+    messages:
+      invalid_postcode: 'This is not a valid postcode'
+      yes_no: 'Please choose an option'
   faker:
     company:
       suffix: [Ltd, plc, LLP]
