--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,8 +2,10 @@ en:
   errors:
     format: "%{message}"
     messages:
-      invalid_postcode: 'This is not a valid postcode'
       inclusion: 'Please choose an option'
+      invalid_postcode: 'Invalid postcode'
+      invalid_location: 'Couldn’t find that postcode'
+      yes_no: 'Please choose an option'
   faker:
     company:
       suffix: [Ltd, plc, LLP]
