Rename hire_via_agency step to looking_for
To mirror the renaming of the parameter in a recent commit.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
       worker_type_question: What type of worker do you need?
       worker_term_question: How long do you need the worker for?
       submit: Continue
-    hire_via_agency:
+    looking_for:
       question: What are you looking for?
       answer_worker: An individual worker
       answer_managed_service_provider: A managed service provider
