--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,18 @@ en:
       question: What is your school's postcode?
       question_hint: We use this to find agencies near to your school
       submit: Continue
+    managed_service_providers_explanation:
+      header: Managed service providers
+      introduction: 'You will need to choose either:'
+      option1_header: A master vendor
+      option1_body_html: |
+        These supply whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.
+        <br>
+        You will then need to contact all the suppliers and run a further competition.
+      option_separator: or
+      option2_header: A neutral vendor
+      option2_body_html: |
+        A neutral vendor only provides candidates from other suppliers - they have no candidates of their own.
   suppliers:
     neutral_vendors:
       header: Neutral vendor managed service providers
