Use locale file for inclusion validation error message
Thanks for the suggestion, @threedaymonk!

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
     messages:
       invalid_postcode: 'This is not a valid postcode'
       yes_no: 'Please choose an option'
+      inclusion: 'Please choose an option'
   faker:
     company:
       suffix: [Ltd, plc, LLP]
