--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,7 +45,7 @@ en:
       answer_master_vendor: Master vendor managed service
       answer_neutral_vendor: Neutral vendor managed service
       submit: Continue
-    nominated_worker:
+    worker_type:
       question: Do you want an agency to supply the worker?
       answer_agency_supplied: 'Yes'
       answer_nominated_worker: No, I have a worker I want the agency to manage (a 'nominated worker')
