--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,7 @@ en:
       question: What are you looking for?
       answer_worker: An individual worker
       answer_managed_service_provider: A managed service provider
+      submit: Continue
     managed_service_provider:
       question: What type of managed service do you want?
       answer_master_vendor: Master vendor managed service
