--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
       print: Print this page
       results_found: results found
       results_found_with_location_html: results found within <strong>%{range}</strong> of <strong>%{postcode}</strong>
+  common:
+    submit: Continue
   errors:
     format: "%{message}"
     messages:
@@ -45,19 +47,16 @@ en:
   search:
     agency_payroll:
       postcode_question: What is your school's postcode?
-      submit: Continue
       worker_term_question: How long do you need the worker for?
       worker_type_question: What type of worker do you need?
     looking_for:
       answer_managed_service_provider: A managed service provider
       answer_worker: An individual worker
       question: What are you looking for?
-      submit: Continue
     managed_service_provider:
       answer_master_vendor: Master vendor managed service
       answer_neutral_vendor: Neutral vendor managed service
       question: What type of managed service do you want?
-      submit: Continue
     managed_service_providers_explanation:
       header: Managed service providers
       introduction: 'You will need to choose either:'
@@ -75,16 +74,13 @@ en:
       answer_agency_payroll: No, I want the agency to deal with payroll
       answer_school_payroll: 'Yes'
       question: Do you want to put the worker on the school's payroll?
-      submit: Continue
     school_postcode:
       question: What is your school's postcode?
       question_hint: We use this to find agencies near to your school
-      submit: Continue
     worker_type:
       answer_agency_supplied: 'Yes'
       answer_nominated_worker: No, I have a worker I want the agency to manage (a 'nominated worker')
       question: Do you want an agency to supply the worker?
-      submit: Continue
   suppliers:
     master_vendors:
       column1: Job Type
