Improve error messages
As per the guidance in the GOV.UK Design System[1][2][3].

The i18n-tasks Gem was complaining that the new keys in the en.yml
locale file weren't being used - it only appears to detect explicit
calls to `translate`. We've avoided this problem by adding them to the
`ignore_unused` key in the i18n-tasks.yml config file.

[1]: https://design-system.service.gov.uk/components/error-message/
[2]: https://design-system.service.gov.uk/components/radios/#error-messages
[3]: https://design-system.service.gov.uk/components/text-input/#error-messages

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,32 @@
 ---
 en:
+  activemodel:
+    errors:
+      models:
+        steps/agency_payroll:
+          attributes:
+            location:
+              invalid_location: Enter a valid postcode
+        steps/looking_for:
+          attributes:
+            looking_for:
+              inclusion: Select individual worker or managed service provider
+        steps/managed_service_provider:
+          attributes:
+            managed_service_provider:
+              inclusion: Select master vendor or neutral vendor managed service
+        steps/payroll_provider:
+          attributes:
+            payroll_provider:
+              inclusion: Select yes if you want to put the worker on the school's payroll
+        steps/school_postcode:
+          attributes:
+            location:
+              invalid_location: Enter a valid postcode
+        steps/worker_type:
+          attributes:
+            worker_type:
+              inclusion: Select yes if you want an agency to supply the worker
   branches:
     branch:
       branch: Branch
@@ -17,7 +44,6 @@ en:
   errors:
     format: "%{message}"
     messages:
-      inclusion: Please choose an option
       invalid_location: Couldn’t find that postcode
       invalid_postcode: Invalid postcode
   faker:
