--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,16 +60,7 @@ en:
       intro_paragraph: 'Use this service to:'
       service_title: Crown Marketplace
       teacher_supply_link: Find supply teachers and non-teaching staff
-  layouts:
-    application:
-      back: Back
-      beta: beta
-      feedback_html: This is a new service – your %{link} will help us to improve it.
-      having_problems: Having problems using this service?
-      skip: Skip to main content
-      support_email_html: Email %{link} for support.
-      title: Crown Commercial Service
-  search:
+  journey:
     agency_payroll:
       postcode_question: What is your school's postcode?
       worker_term_question: How long do you need the worker for?
@@ -106,6 +97,15 @@ en:
       answer_agency_supplied: 'Yes'
       answer_nominated_worker: No, I have a worker I want the agency to manage (a 'nominated worker')
       question: Do you want an agency to supply the worker?
+  layouts:
+    application:
+      back: Back
+      beta: beta
+      feedback_html: This is a new service – your %{link} will help us to improve it.
+      having_problems: Having problems using this service?
+      skip: Skip to main content
+      support_email_html: Email %{link} for support.
+      title: Crown Commercial Service
   suppliers:
     master_vendors:
       column1: Job Type
