Add a journey for facilities management
Adds a facilities management journey, allowing the
user to select a value band and then taking them to
one of three placeholder pages.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,6 +93,16 @@ en:
     school_postcode:
       question: What is your school's postcode?
       question_hint: We use this to find agencies near to your school
+    value_band:
+      answer_over50m: Over £50 million
+      answer_under1_5m: Up to £1.5 million
+      answer_under50m: "£7 million – £50 million"
+      answer_under7m: "£1.5 million – £7 million"
+      direct_award: Direct award to a supplier is only an option for the first of these spending bands.
+      question: What is the maximum amount you will be spending overall, taking into account all buildings and services, and the total contract length?
+      question_hint: This can be current costs, or estimated annual costs.
+      submit: Continue
+      validation_error: Select a value band to see a list of suppliers
     worker_type:
       answer_agency_supplied: 'Yes'
       answer_nominated_worker: No, I have a worker I want the agency to manage (a 'nominated worker')
