Add optional 'Error' prefix to page title
As per https://design-system.service.gov.uk/components/error-summary/#how-it-works.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -112,6 +112,7 @@ en:
     application:
       back: Back
       beta: beta
+      error_prefix: Error
       feedback_html: This is a new service – your %{link} will help us to improve it.
       having_problems: Having problems using this service?
       skip: Skip to main content
