--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,14 @@ en:
   activemodel:
     errors:
       models:
+        facilities_management/steps/supplier_region:
+          attributes:
+            region_codes:
+              too_short: Select at least one region
+        facilities_management/steps/value_band:
+          attributes:
+            value_band:
+              inclusion: Select a value band to see a list of suppliers
         steps/agency_payroll:
           attributes:
             location:
@@ -23,14 +31,6 @@ en:
           attributes:
             location:
               invalid_location: Enter a valid postcode
-        steps/supplier_region:
-          attributes:
-            region_codes:
-              too_short: Select at least one region
-        steps/value_band:
-          attributes:
-            value_band:
-              inclusion: Select a value band to see a list of suppliers
         steps/worker_type:
           attributes:
             worker_type:
