Rename teacher_supply_link key to supply_teachers_link
This is more consistent with the naming we've used elsewhere in the
codebase.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,7 +67,7 @@ en:
       facilities_management_link: Find a facilities management supplier
       intro_paragraph: 'Use this service to:'
       service_title: Crown Marketplace
-      teacher_supply_link: Find supply teachers and non-teaching staff
+      supply_teachers_link: Find supply teachers and non-teaching staff
   journey:
     agency_payroll:
       postcode_question: What is your school's postcode?
