Add start page for management consultancy framework
Currently the start button just takes you to a list of *all* suppliers
on the CCS website.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,7 @@ en:
     index:
       facilities_management_link: Find a facilities management supplier
       intro_paragraph: 'Use this service to:'
+      management_consultancy_link: Find management consultancy services
       service_title: Crown Marketplace
       supply_teachers_link: Find supply teachers and non-teaching staff
   journey:
