--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,6 +61,7 @@ en:
       management_consultancy_link: Find management consultancy services
       service_title: Crown Marketplace
       supply_teachers_link: Find supply teachers and non-teaching staff
+      temp_to_perm_calculator_link: Calculate the fee you have to pay when recruiting a supply teacher
   journey:
     agency_payroll:
       postcode_question: What is your school's postcode?
