--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,11 @@ en:
     messages:
       invalid_location: Couldn’t find that postcode
       invalid_postcode: Invalid postcode
+  facilities_management:
+    suppliers:
+      supplier:
+        contact_email_missing: Contact email not available
+        contact_name_missing: Contact name not available
   faker:
     company:
       name:
