Buyers can filter MC suppliers by regions
We've intentionally kept the implementation of the methods on
ManagementConsultancy::Supplier and related models as similar as
possible to the corresponding models in FacilitiesManagement so that it
will be easier to extract duplication in a later step.

Co-authored-by: Ben Griffiths <bengriffiths@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,10 @@ en:
           attributes:
             lot:
               inclusion: Please choose a lot for the services you require
+        management_consultancy/steps/choose_regions:
+          attributes:
+            region_codes:
+              too_short: Select at least one region
         management_consultancy/steps/choose_services:
           attributes:
             services:
@@ -88,6 +92,8 @@ en:
       question: What kind of management consultancy do you want to procure?
       question_hint: The lot you choose here will affect the services offered and the suppliers presented.
       submit: Continue
+    choose_regions:
+      question: In which regions will you require the services?
     choose_services:
       question: What services will you require?
     contract_start:
