--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,7 +132,7 @@ en:
       beta: beta
       error_prefix: Error
       feedback_aria_label: Email your feedback on this service
-      feedback_html: This is a new service – your %{link} will help us to improve it.
+      feedback_html: This is a new service – your feedback (%{link}) will help us to improve it.
       having_problems: Having problems using this service?
       skip: Skip to main content
       support_aria_label: Email us for support with this service
